[package]
name = "whatismyip"
version = "0.1.1"
edition = "2021"
description = "What is my (public) IP?"
license = "MIT"
repository = "https://github.com/qtfkwk/whatismyip"

[dependencies]
clap = { version = "4.5.16", features = ["derive", "wrap_help"] }
public-ip = "0.2.2"
tokio = { version = "1.39.3", features = ["macros"] }
