[package]
name = "whatismyip"
version = "0.2.4"
edition = "2021"
description = "What is my (public) IP?"
license = "MIT"
repository = "https://github.com/qtfkwk/whatismyip"

[dependencies]
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
public-ip = "0.2.2"
tokio = { version = "1.48.0", features = ["macros"] }
